--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Newcomer">
     <title>Newcomer</title>
-    <link
-        href="https://fonts.googleapis.com/css?family=Exo+2:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap&subset=latin-ext"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
@@ -18,7 +16,29 @@
 
 <!-- header -->
 <section class="header">
-
+    <div class="container">
+        <div class="row header-content">
+            <div class="col-xs-12 col-md-3">
+                <div class="logo">
+                    <a href="/"><img src="images/logo.png" alt="logo" /></a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-9">
+                <nav class="navbar menu" id="menu">
+                    <ul class="menu-list">
+                        <li class="nav-item"><a href="#" class="nav-link">Strona główna</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Usługi</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Cennik</a></li>
+                        <li class="nav-item"><a href="http://profesjonalneszkolenia.com.pl" target="_blank" class="nav-link">Szkolenia</a></li>
+                        <li class="nav-item"><a href="https://hurtowniawera.pl/" target="_blank" class="nav-link">Hurtownia</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Kontakt</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid slider">
+    </div>
 </section>
 <!-- ./header -->
 
