Create offer cta and footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Newcomer">
-    <title>Newcomer</title>
+    <title>Newcomer - Salon & Akademia</title>
     <link
         href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700&display=swap"
         rel="stylesheet">
@@ -60,7 +60,7 @@
                                 <a class="nav-link" href="https://hurtowniawera.pl/" target="_blank">Hurtownia</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-scroll href="kontakt">Kontakt</a>
+                                <a class="nav-link" data-scroll href="#kontakt">Kontakt</a>
                             </li>
                         </ul>
                     </nav>
@@ -69,16 +69,16 @@
         </div>
         <div class="container-fluid slider">
             <div class="row">
-                <div class="col-xs-12 col-md-6 slider-description">
-                    <span class="hero">Lorem ipsum</span>
-                    <span class="hero-description">Lorem ipsum dolor sit amet enim. Etiam ullamcorper.</span>
+                <div class="col-xs-12 col-lg-6 slider-description">
+                    <span class="hero">Ponieważ piękno jest cenne</span>
+                    <span class="hero-description">Odkryj miejsce, w którym rodzi się pasja i styl</span>
                 </div>
             </div>
         </div>
     </section>
     <!-- ./header -->
 
-    <!-- container -->
+    <!-- offer -->
     <section class="offer" id="uslugi">
         <div class="container">
             <div class="row no-gutters offer-box">
@@ -151,7 +151,156 @@
             </div>
         </div>
     </section>
-    <!-- ./container -->
+    <!-- ./offer -->
+
+    <!-- price list -->
+    <section class="priceList" id="cennik">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>Cennik</h2>
+                </div>
+            </div>
+            <div class="row price-row">
+                <div class="col-xs-12 col-lg-6 price-row-column">
+                    <div class="price-row-header">
+                        <span class="price-title">Stylizacja paznokci</span>
+                    </div>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-lg-6 price-row-column">
+                    <div class="price-row-header">
+                        <span class="price-title">Stylizacja rzęs</span>
+                    </div>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row price-row">
+                <div class="col-xs-12 col-lg-6 price-row-column">
+                    <div class="price-row-header">
+                        <span class="price-title price-title-big">Stylizacja i geometria brwi</span>
+                    </div>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-lg-6 price-row-column">
+                    <div class="price-row-header">
+                        <span class="price-title">Pedicure</span>
+                    </div>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-lg-6 price-row-column">
+                    <div class="price-row-header">
+                        <span class="price-title">Podologia</span>
+                    </div>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ./ price list -->
+
+    <!-- CTA -->
+    <section class="cta">
+        <div class="container">
+            <div class="row cta-content">
+                <div class="col-xs-12 col-sm-9">
+                    <h2>Dowiedz się więcej!</h2>
+                    <span>Nasz zespół tworzą ludzie z pasją, którzy nieustannie poszerzają swoją wiedzę by móc korzystać z najnowocześniejszych metod zabiegów kosmetycznych i spełnić oczekiwania najbardziej wymagających Klientów. W Newcomer chętnie doradzamy, wsłuchujemy się w Twoje potrzeby, a naszym celem jest Twoje zadowolenie i pewność siebie. Przeniesiemy Cię do wspaniałego świata urody i ziścimy Twoje marzenia o idealnym wyglądzie!</span>
+                    <a href="tel:728575060" role="button" class="btn btn-outline-light">Umów wizytę</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ./CTA -->
+
+    <!-- footer -->
+    <section class="footer" id="kontakt">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-6 map">
+                    <div class="map-responsive">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9575.697301647415!2d17.992719!3d53.129504000000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470313b64bce78c1%3A0xf9db89be0c833162!2sKr%C3%B3lowej+Jadwigi+19%2C+85-200+Bydgoszcz!5e0!3m2!1spl!2spl!4v1561297513966!5m2!1spl!2spl" style="border:0; width: 100%; height: 300px;" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 contact-desc">
+                    <h2>Dane kontaktowe</h2>
+                    <ul>
+                        <li>Newcomer Salon & Akademia</li>
+                        <li>ul. Kr. Jadwigi 19</li>
+                        <li>85-200 Bydgoszcz</li>
+                        <li>&nbsp;</li>
+                        <li>Krzysia: 516 036 206</li>
+                        <li>Beata: 530 083 370</li>
+                        <li>Irina: 792 796 876</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ./footer -->
+
+    <!-- copyright -->
+    <section class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    NEWCOMER Salon & Akademia © 2019 Wszelkie prawa zastrzeżone
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ./copyright -->
+
+    <!-- facebook -->
+    <div class="facebook">
+        <a href="https://www.facebook.com/Newcomer-Szkolenia-NailLashPodologiaPermanentny-946988265333952/" target="_blank"><img src="images/logo-facebook.png" class="facebook-logo"/></a>
+    </div>
+    <!-- ./facebook -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
