fix mobile version

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <section class="cta">
         <div class="container">
             <div class="row cta-content">
-                <div class="col-xs-12 col-sm-9">
+                <div class="col-xs-12 col-md-8 col-lg-9">
                     <h2>Dowiedz się więcej!</h2>
                     <span>Nasz zespół tworzą ludzie z pasją, którzy nieustannie poszerzają swoją wiedzę by móc korzystać z najnowocześniejszych metod zabiegów kosmetycznych i spełnić oczekiwania najbardziej wymagających Klientów. W Newcomer chętnie doradzamy, wsłuchujemy się w Twoje potrzeby, a naszym celem jest Twoje zadowolenie i pewność siebie. Przeniesiemy Cię do wspaniałego świata urody i ziścimy Twoje marzenia o idealnym wyglądzie!</span>
                     <a href="tel:728575060" role="button" class="btn btn-outline-light">Umów wizytę</a>
