--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
                         <span class="price-title">Stylizacja paznokci</span>
                     </div>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Przedłużanie paznokci żelem forma/tips<span class="price-pln">od 110 zł</span></li>
+                        <li>Uzupełnienie paznokci żelowych<span class="price-pln">od 70 zł</span></li>
+                        <li>Manicure hybrydowy<span class="price-pln">od 60 zł</span></li>
+                        <li>Manicure japoński<span class="price-pln">30 zł</span></li>
+                        <li>Manicure z lakierem<span class="price-pln">30 zł</span></li>
+                        <li>Tytan na naturalnej płytce<span class="price-pln">80 zł</span></li>
+                        <li>Zdobienia ręczne 1 paznokieć<span class="price-pln">od 5 do 15 zl</span></li>
+                        <li>Naprawa 1 paznokcia<span class="price-pln">10 zł</span></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-lg-6 price-row-column">
@@ -182,14 +182,13 @@
                         <span class="price-title">Stylizacja rzęs</span>
                     </div>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Rzęsy 1:1 założenie<span class="price-pln">150 zł</span></li>
+                        <li>Rzęsy 1:1 uzupełnienie<span class="price-pln">100 zł</span></li>
+                        <li>Rzęsy 2-3d założenie<span class="price-pln">180 zł</span></li>
+                        <li>Rzęsy 2-3d uzupełnienie<span class="price-pln">130 zł</span></li>
+                        <li>Rzęsy 4-5d założenie<span class="price-pln">200 zł</span></li>
+                        <li>Rzęsy 4-5d uzupełnienie<span class="price-pln">150 zł</span></li>
+                        <li>Lifting laminacja botox<span class="price-pln">70 zł</span></li>
                     </ul>
                 </div>
             </div>
@@ -199,14 +198,7 @@
                         <span class="price-title price-title-big">Stylizacja i geometria brwi</span>
                     </div>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Geometria brwi i brownhenna<span class="price-pln">60 zł</span></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-lg-6 price-row-column">
@@ -214,14 +206,9 @@
                         <span class="price-title">Pedicure</span>
                     </div>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Pedicure kosmetyczny z lakierem<span class="price-pln">60 zł</span></li>
+                        <li>Pedicure kosmetyczny z hybrydą<span class="price-pln">100 zł</span></li>
+                        <li>Hybryda na stopy<span class="price-pln">60 zł</span></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-lg-6 price-row-column">
@@ -229,14 +216,14 @@
                         <span class="price-title">Podologia</span>
                     </div>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
-                        <li>Lorem ipsum dolor sit amet enim<span class="price-pln">9.99 Zł</span></li>
+                        <li>Pedicure leczniczy<span class="price-pln">80 zł</span></li>
+                        <li>Pedicure leczniczy z hybrydą<span class="price-pln">120 zł</span></li>
+                        <li>Usuwanie odcisków<span class="price-pln">20 zł/szt.</span></li>
+                        <li>Usuwanie brodawek elektrokoagulacja <span class="price-pln">od 30 zł</span></li>
+                        <li>Klamra na wrastający paznokieć - metalowa<span class="price-pln">70 zł</span></li>
+                        <li>Klamra na wrastający paznokieć - drutowa<span class="price-pln">120 zł</span></li>
+                        <li>Ozonowanie butów<span class="price-pln">10 zł/para</span></li>
+                        <li>Rekonstrukcja płytki paznokcia akrylem<span class="price-pln">30 zł/szt.</span></li>
                     </ul>
                 </div>
             </div>
@@ -251,7 +238,7 @@
                 <div class="col-xs-12 col-md-8 col-lg-9">
                     <h2>Dowiedz się więcej!</h2>
                     <span>Nasz zespół tworzą ludzie z pasją, którzy nieustannie poszerzają swoją wiedzę by móc korzystać z najnowocześniejszych metod zabiegów kosmetycznych i spełnić oczekiwania najbardziej wymagających Klientów. W Newcomer chętnie doradzamy, wsłuchujemy się w Twoje potrzeby, a naszym celem jest Twoje zadowolenie i pewność siebie. Przeniesiemy Cię do wspaniałego świata urody i ziścimy Twoje marzenia o idealnym wyglądzie!</span>
-                    <a href="tel:728575060" role="button" class="btn btn-outline-light">Umów wizytę</a>
+                    <a href="tel:516036206" role="button" class="btn btn-outline-light">Umów wizytę</a>
                 </div>
             </div>
         </div>
